--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: black;
+    color: aliceblue;
+}
+span{
+    color: red;
+    font-size: 60px;
+}
