--- a/src/CSS/Details.css
+++ b/src/CSS/Details.css
@@ -1,35 +1,20 @@
-.details_two{
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.details{
     display: flex;
+    gap: 15px;
+    margin-top: 20px;
     width: 100%;
     height: 80vh;
-    justify-content:space-evenly ;
-    color: aliceblue;
-    gap: 15px;
 }
-p{
-    color: aliceblue;
-    flex-grow: 1;
-    font-size: larger;
-}
-.detailsImg{
+img{
     display: block;
-    clear: both;
-    flex:0 0 calc(50% - 10px);
-    border-radius: 10px;
-    margin-left: 20px;
 }
-.spinner{
-    position: absolute;
-    top: 50%;
-    left: 40%;
-    width: 200px;
-    height: 200px;
-    border-top:8px solid  white;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    overflow: hidden;
-}
-@keyframes spin {
-    0% {transform: rotate(0deg);}
-    100%{transform: rotate(360deg);}
+.details h1 , h2 , p{
+    margin-top: 15px;
+    padding: 10px;
+    color: red;
 }
