--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -1,40 +1,39 @@
-.photo{
-    clear: both;
-    width: 100%;
+.fetching{
     display: flex;
+    gap: 15px;
     flex-wrap: wrap;
-    color: aliceblue;
+    width: 100%;
+    height: 80vh;
 }
 img{
-    display: block;
+    display:block;
     width: 100%;
+    border-radius: 15px;
 }
-.div_2{
-    width: 300px;
-    height: auto;
-    text-align: center;
-    margin-left: 28px;
-    margin-top: 15px;
+.photo{
+    width: 200px;
+    margin-top: 30px;
+    margin-left: 10px;
 }
-
-   
-i{
-    margin:10px ;
+.link{
+    text-decoration: none;
     color: aliceblue;
+}
+h1 , p , h2 {
+    margin-top: 8px;
 }
 .loading{
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 40%;
     width: 200px;
     height: 200px;
-    border-top:8px solid  white;
     border-radius: 50%;
-    animation: spin 1s linear infinite;
     overflow: hidden;
+    border-top: 8px solid red;
+    animation: spin 1s linear infinite;
 }
 @keyframes spin {
-    0% {transform: rotate(0deg);}
+    0%{transform: rotate(0deg);}
     100%{transform: rotate(360deg);}
 }
-
